--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "SBOLTestSuite"]
-	path = SBOLTestSuite
-	url = https://github.com/SynBioDex/SBOLTestSuite.git
+[submodule "src/test/resources/SBOLTestSuite"]
+	path = src/test/resources/SBOLTestSuite
+	url = https://github.com/SynBioDex/SBOLTestSuite
